--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "framer-motion": "^11.3.24",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-flagkit": "^2.0.4",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
